--- a/calculator_app/calculator_avansat.css
+++ b/calculator_app/calculator_avansat.css
@@ -2,7 +2,7 @@
 
 .row{
     display: grid;
-    grid-template-columns: 10% 10% 10% 10%;
+    grid-template-columns: 10% 10% 10% 10% 10%;
 }
 
 .result{
