--- a/proiect1_ceas/clock.css
+++ b/proiect1_ceas/clock.css
@@ -1,9 +1,9 @@
 #clock {
     font-size: 175px;
-    width: 900px;
+    width: 1000px;
     margin: 200px;
     text-align: center;
-    border: 2px solid black;
+    border: 2px dotted black;
     border-radius: 20px;
     background-color: bisque;
   }
