--- a/calculator_clasic/style.css
+++ b/calculator_clasic/style.css
@@ -1,132 +1,112 @@
+body {
+  background-color: #85a8dd;
+  z-index: -1;
+}
+
 html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-  }
-  
-  *, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-  }
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
 
-  .calculator {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-  }
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
 
-  .calculator-screen {
-    width: 100%;
-    font-size: 5rem;
-    height: 80px;
-    border: none;
-    background-color: #252525;
-    color: #fff;
-    text-align: right;
-    padding-right: 20px;
-    padding-left: 10px;
-  }
+.calculator {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  background-color: #fff;
+  z-index: 1;
+}
 
-  button {
-    height: 60px;
-    background-color: #fff;
-    border-radius: 3px;
-    border: 1px solid #c4c4c4;
-    background-color: transparent;
-    font-size: 2rem;
-    color: #333;
-    background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
-    box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
-    text-shadow: 0 1px rgba(255,255,255,.4);
-  }
-  
-  button:hover {
-    background-color: #eaeaea;
-  }
-  
-  .operator {
-    color: #337cac;
-  }
-  
-  .all-clear {
-    background-color: #f0595f;
-    border-color: #b0353a;
-    color: #fff;
-  }
-  
-  .all-clear:hover {
-    background-color: #f17377;
-  }
-  
-  .equal-sign {
-    background-color: #2e86c0;
-    border-color: #337cac;
-    color: #fff;
-  }
-  
-  .equal-sign:hover {
-    background-color: #4e9ed4;
-  }
+.calculator-screen {
+  width: 100%;
+  font-size: 5rem;
+  height: 80px;
+  border: none;
+  background-color: #252525;
+  color: #fff;
+  text-align: right;
+  padding-right: 20px;
+  padding-left: 10px;
+}
 
-  button {
-    height: 60px;
-    background-color: #fff;
-    border-radius: 3px;
-    border: 1px solid #c4c4c4;
-    background-color: transparent;
-    font-size: 2rem;
-    color: #333;
-    background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
-    box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
-    text-shadow: 0 1px rgba(255,255,255,.4);
-  }
-  
-  button:hover {
-    background-color: #eaeaea;
-  }
-  
-  .operator {
-    color: #337cac;
-  }
-  
-  .all-clear {
-    background-color: #f0595f;
-    border-color: #b0353a;
-    color: #fff;
-  }
-  
-  .all-clear:hover {
-    background-color: #f17377;
-  }
-  
-  .equal-sign {
-    background-color: #2e86c0;
-    border-color: #337cac;
-    color: #fff;
-  }
-  
-  .equal-sign:hover {
-    background-color: #4e9ed4;
-  }
+button {
+  height: 60px;
+  background-color: #fff;
+  border-radius: 3px;
+  border: 1px solid #c4c4c4;
+  background-color: transparent;
+  font-size: 2rem;
+  color: #333;
+  background-image: linear-gradient(
+    to bottom,
+    transparent,
+    transparent 50%,
+    rgba(0, 0, 0, 0.04)
+  );
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05),
+    inset 0 1px 0 0 rgba(255, 255, 255, 0.45),
+    inset 0 -1px 0 0 rgba(255, 255, 255, 0.15),
+    0 1px 0 0 rgba(255, 255, 255, 0.15);
+  text-shadow: 0 1px rgba(255, 255, 255, 0.4);
+}
 
-  .calculator-keys {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    padding: 20px;
-  }
+button:hover {
+  background-color: #eaeaea;
+}
 
-  .equal-sign {
-    background-color: #2e86c0;
-    border-color: #337cac;
-    color: #fff;
-    height: 100%;
-    grid-row-start: 2;
-    grid-row-end: 5;
-    grid-column-start: 4;
-    grid-column-end: 5;
-  }
+.operator {
+  color: #337cac;
+}
+
+.all-clear {
+  background-color: #6660be;
+  border-color: #8ea0e5;
+  color: #fff;
+}
+
+.all-clear:hover {
+  background-color: #85a8dd;
+}
+
+.calculator-keys {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  padding: 20px;
+}
+
+.equal-sign {
+  background-color: #24b853;
+  border-color: #0f582b;
+  color: #fff;
+  height: 100%;
+  grid-row-start: 2;
+  grid-row-end: 5;
+  grid-column-start: 4;
+  grid-column-end: 5;
+}
+
+.equal-sign:hover {
+  background-color: #4ed481;
+}
+
+.delete-digit {
+  background-color: rgb(239, 91, 32);
+  border-color: #d55316;
+  color: #fff;
+}
+
+.delete-digit:hover {
+  background-color: orange;
+}
