New elements CSS and HTML

--- a/portofolio-cv_AncaLetitiaProvian/style.css
+++ b/portofolio-cv_AncaLetitiaProvian/style.css
@@ -425,28 +425,28 @@ section .title::after {
 .projects .title::after {
   content: "made by me";
 }
-.projects .carousel .card {
+/* .projects .carousel .card {
   background: #222;
   border-radius: 6px;
   padding: 25px 35px;
   text-align: center;
   overflow: hidden;
   transition: all 0.3s ease;
-}
-.projects .carousel .card:hover {
+} */
+/* .projects .carousel .card:hover {
   background: crimson;
-}
-.projects .carousel .card .box {
+} */
+/* .projects .carousel .card .box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;
-}
-.projects .carousel .card:hover .box {
+} */
+/* .projects .carousel .card:hover .box {
   transform: scale(1.05);
-}
-.projects .carousel .card .text {
+} */
+/* .projects .carousel .card .text {
   font-size: 25px;
   font-weight: 500;
   margin: 10px 0 7px 0;
@@ -461,7 +461,7 @@ section .title::after {
 }
 .projects .carousel .card:hover img {
   border-color: #fff;
-}
+} */
 .owl-dots {
   text-align: center;
   margin-top: 20px;
