--- a/portofolio-cv_AncaLetitiaProvian/style.css
+++ b/portofolio-cv_AncaLetitiaProvian/style.css
@@ -55,6 +55,7 @@ footer {
   align-items: center;
   justify-content: space-between;
 }
+
 section .title {
   position: relative;
   text-align: center;
@@ -413,45 +414,97 @@ section .title::after {
   width: 70%;
 }
 
-/* projects section styling */
+/* exper section  */
 
-.grid-container {
+/* RIGHT SIDE ITEMS */
+.right_items {
+  margin-bottom: 2rem;
+  font-weight: 600;
+  color: #fff;
+}
+.right_items .subtitle {
+  font-size: 20px;
+  margin-top: 2rem;
+  margin-bottom: 0.6rem;
+}
+.exper {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 0;
+}
+.exper .time_line {
+  margin-top: 1px;
+}
+.exper .time_line .time_point {
+  width: 1.2rem;
+  height: 1.2rem;
+  display: block;
+  background: crimson;
+  border-radius: 50%;
+}
+.exper .time_line .time_road {
+  width: 0.2rem;
+  height: 100%;
+  display: block;
+  background: crimson;
+  transform: translate(0.5rem, 0);
+}
+.exper .content {
+  display: grid;
+  grid-template-columns: 10rem auto;
+}
+.exper .content .interval {
+  color: #f1f1f1;
+  min-width: 10rem;
+  text-align: center;
+  font-weight: 400;
+}
+.exper .content .description h4 {
+  color: crimson;
+}
+
+/* projects section styling */
+.serv-content {
   display: grid;
   grid-template: 230px / auto auto auto auto;
   grid-gap: 10px;
   padding: 10px;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .projects .title::after {
   content: "made by me";
 }
-/* .projects .carousel .card {
+.projects .card {
   background: #222;
   border-radius: 6px;
   padding: 25px 35px;
   text-align: center;
   overflow: hidden;
   transition: all 0.3s ease;
-} */
-/* .projects .carousel .card:hover {
+}
+.projects .card:hover {
   background: crimson;
-} */
-/* .projects .carousel .card .box {
+}
+.projects .card .box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;
-} */
-/* .projects .carousel .card:hover .box {
+}
+.projects .card:hover .box {
   transform: scale(1.05);
-} */
-/* .projects .carousel .card .text {
+}
+.projects .card .text {
   font-size: 25px;
   font-weight: 500;
   margin: 10px 0 7px 0;
 }
-.projects .carousel .card img {
+.projects .card img {
   height: 150px;
   width: 150px;
   object-fit: cover;
@@ -459,9 +512,10 @@ section .title::after {
   border: 5px solid crimson;
   transition: all 0.3s ease;
 }
-.projects .carousel .card:hover img {
+.projects .card:hover img {
   border-color: #fff;
-} */
+}
+
 .owl-dots {
   text-align: center;
   margin-top: 20px;
@@ -585,6 +639,7 @@ footer {
   padding: 15px 23px;
   color: #fff;
   text-align: center;
+  /* position: fixed; */
 }
 footer span a {
   color: crimson;
