--- a/portofolio-cv_AncaLetitiaProvian/style.css
+++ b/portofolio-cv_AncaLetitiaProvian/style.css
@@ -29,7 +29,7 @@ html {
   background: #555;
 }
 
-/* all similar content styling codes */
+/* All similar content styling codes */
 section {
   padding: 100px 0;
 }
@@ -86,7 +86,7 @@ section .title::after {
   transform: translateX(-50%);
 }
 
-/* navbar styling */
+/* Navbar styling */
 .navbar {
   position: fixed;
   width: 100%;
@@ -135,7 +135,7 @@ section .title::after {
   color: #fff;
 }
 
-/* menu btn styling */
+/* Menu btn styling */
 .menu-btn {
   color: #fff;
   font-size: 23px;
@@ -170,7 +170,7 @@ section .title::after {
   filter: brightness(90%);
 }
 
-/* home section styling */
+/* Home section styling */
 .home {
   display: flex;
   background: url("images/banner.jpg") no-repeat center;
@@ -221,7 +221,7 @@ section .title::after {
   background: none;
 }
 
-/* about section styling */
+/* About section styling */
 .about .title::after {
   content: "who i am";
 }
@@ -265,7 +265,21 @@ section .title::after {
   background: none;
 }
 
-/* Education import CSS portofolio website */
+/* Education section styling */
+.education,
+.projects {
+  color: #fff;
+  background: #111;
+}
+.education .title::before,
+.projects .title::before {
+  background: #fff;
+}
+.education .title::after,
+.projects .title::after {
+  background: #111;
+  content: "what i learned";
+}
 .education .box-container {
   display: flex;
   align-items: center;
@@ -317,23 +331,7 @@ section .title::after {
   background: crimson;
 }
 
-/* education section styling */
-.education,
-.projects {
-  color: #fff;
-  background: #111;
-}
-.education .title::before,
-.projects .title::before {
-  background: #fff;
-}
-.education .title::after,
-.projects .title::after {
-  background: #111;
-  content: "what i learned";
-}
-
-/* experience section styling */
+/* Experience section styling */
 .experience {
   color: #fff;
   background: #111;
@@ -405,7 +403,7 @@ section .title::after {
   width: 60%;
 }
 .experience-content .right .js::before {
-  width: 80%;
+  width: 40%;
 }
 .experience-content .right .xml::before {
   width: 50%;
@@ -414,9 +412,7 @@ section .title::after {
   width: 70%;
 }
 
-/* exper section  */
-
-/* RIGHT SIDE ITEMS */
+/* Jobs section styling */
 .right_items {
   margin-bottom: 2rem;
   font-weight: 600;
@@ -427,43 +423,43 @@ section .title::after {
   margin-top: 2rem;
   margin-bottom: 0.6rem;
 }
-.exper {
+.jobs {
   display: flex;
   flex-direction: row;
   margin: 1rem 0;
 }
-.exper .time_line {
+.jobs .time_line {
   margin-top: 1px;
 }
-.exper .time_line .time_point {
+.jobs .time_line .time_point {
   width: 1.2rem;
   height: 1.2rem;
   display: block;
   background: crimson;
   border-radius: 50%;
 }
-.exper .time_line .time_road {
+.jobs .time_line .time_road {
   width: 0.2rem;
   height: 100%;
   display: block;
   background: crimson;
   transform: translate(0.5rem, 0);
 }
-.exper .content {
+.jobs .content {
   display: grid;
   grid-template-columns: 10rem auto;
 }
-.exper .content .interval {
+.jobs .content .interval {
   color: #f1f1f1;
   min-width: 10rem;
   text-align: center;
   font-weight: 400;
 }
-.exper .content .description h4 {
+.jobs .content .description h4 {
   color: crimson;
 }
 
-/* projects section styling */
+/* Projects section styling */
 .serv-content {
   display: grid;
   grid-template: 230px / auto auto auto auto;
@@ -516,29 +512,7 @@ section .title::after {
   border-color: #fff;
 }
 
-.owl-dots {
-  text-align: center;
-  margin-top: 20px;
-}
-.owl-dot {
-  height: 13px;
-  width: 13px;
-  margin: 0 5px;
-  outline: none !important;
-  border-radius: 50%;
-  border: 2px solid crimson !important;
-  transition: all 0.3s ease;
-}
-.owl-dot.active {
-  width: 35px;
-  border-radius: 14px;
-}
-.owl-dot.active,
-.owl-dot:hover {
-  background: crimson !important;
-}
-
-/* contact section styling */
+/* Contact section styling */
 .contact .title::after {
   content: "get in touch";
 }
@@ -633,13 +607,12 @@ section .title::after {
   color: crimson;
   background: none;
 }
-/* footer section styling */
+/* Footer section styling */
 footer {
   background: #111;
   padding: 15px 23px;
   color: #fff;
   text-align: center;
-  /* position: fixed; */
 }
 footer span a {
   color: crimson;
@@ -649,7 +622,7 @@ footer span a:hover {
   text-decoration: underline;
 }
 
-/* responsive media query start */
+/* Responsive media query start */
 @media (max-width: 1104px) {
   .about .about-content .left img {
     height: 350px;
