--- a/proiect 2-JS/mobile-shop/form-style.css
+++ b/proiect 2-JS/mobile-shop/form-style.css
@@ -1,74 +1,72 @@
 /* https://www.sanwebe.com/2014/08/css-html-forms-designs#form-1-html */
 .form-style-1 {
-	margin: 10px auto;
-	/* max-width: 400px; */
-	padding: 20px 12px 10px 20px;
-	font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  margin: 10px auto;
+  padding: 20px 12px 10px 20px;
+  font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 .form-style-1 li {
-	padding: 0;
-	display: block;
-	list-style: none;
-	margin: 10px 0 0 0;
+  padding: 0;
+  display: block;
+  list-style: none;
+  margin: 10px 0 0 0;
 }
-.form-style-1 label{
-	margin:0 0 3px 0;
-	padding: 5px;
-	/* display:block; */
-    display: inline-block;
-    width: 140px;
-    text-align: right;
-	font-weight: bold;
+.form-style-1 label {
+  margin: 0 0 3px 0;
+  padding: 5px;
+  display: inline-block;
+  width: 140px;
+  text-align: right;
+  font-weight: bold;
 }
-.form-style-1 input[type=text], 
-.form-style-1 input[type=date],
-.form-style-1 input[type=datetime],
-.form-style-1 input[type=number],
-.form-style-1 input[type=search],
-.form-style-1 input[type=time],
-.form-style-1 input[type=url],
-.form-style-1 input[type=email],
-textarea, 
-select{
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	border:1px solid #BEBEBE;
-	padding: 7px;
-	margin:0px;
-	-webkit-transition: all 0.30s ease-in-out;
-	-moz-transition: all 0.30s ease-in-out;
-	-ms-transition: all 0.30s ease-in-out;
-	-o-transition: all 0.30s ease-in-out;
-	outline: none;	
+.form-style-1 input[type="text"],
+.form-style-1 input[type="date"],
+.form-style-1 input[type="datetime"],
+.form-style-1 input[type="number"],
+.form-style-1 input[type="search"],
+.form-style-1 input[type="time"],
+.form-style-1 input[type="url"],
+.form-style-1 input[type="email"],
+textarea,
+select {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  border: 1px solid #0e9be7;
+  padding: 7px;
+  margin: 0px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  outline: none;
 }
-.form-style-1 input[type=text]:focus, 
-.form-style-1 input[type=date]:focus,
-.form-style-1 input[type=datetime]:focus,
-.form-style-1 input[type=number]:focus,
-.form-style-1 input[type=search]:focus,
-.form-style-1 input[type=time]:focus,
-.form-style-1 input[type=url]:focus,
-.form-style-1 input[type=email]:focus,
-.form-style-1 textarea:focus, 
-.form-style-1 select:focus{
-	-moz-box-shadow: 0 0 8px #88D5E9;
-	-webkit-box-shadow: 0 0 8px #88D5E9;
-	box-shadow: 0 0 8px #88D5E9;
-	border: 1px solid #88D5E9;
+.form-style-1 input[type="text"]:focus,
+.form-style-1 input[type="date"]:focus,
+.form-style-1 input[type="datetime"]:focus,
+.form-style-1 input[type="number"]:focus,
+.form-style-1 input[type="search"]:focus,
+.form-style-1 input[type="time"]:focus,
+.form-style-1 input[type="url"]:focus,
+.form-style-1 input[type="email"]:focus,
+.form-style-1 textarea:focus,
+.form-style-1 select:focus {
+  -moz-box-shadow: 0 0 8px #09a0c6;
+  -webkit-box-shadow: 0 0 8px #09a0c6;
+  box-shadow: 0 0 8px #09a0c6;
+  border: 1px solid #09a0c6;
 }
-.form-style-1 .field-divided{
-	width: 49%;
+.form-style-1 .field-divided {
+  width: 49%;
 }
 
-.form-style-1 .field-long{
-	width: 100%;
+.form-style-1 .field-long {
+  width: 100%;
 }
-.form-style-1 .field-select{
-	width: 100%;
+.form-style-1 .field-select {
+  width: 100%;
 }
-.form-style-1 .field-textarea{
-	height: 100px;
+.form-style-1 .field-textarea {
+  height: 100px;
 }
 /* .form-style-1 input[type=submit], .form-style-1 input[type=button]{
 	background: #4B99AD;
@@ -82,6 +80,6 @@ select{
 	-moz-box-shadow:none;
 	-webkit-box-shadow:none;
 } */
-.form-style-1 .required{
-	color:red;
-}
+/* .form-style-1 .required {
+  color: rgb(232, 20, 20);
+} */
